k8s/applications/development/config-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipbob-config-service
  labels:
    app: zipbob-config-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipbob-config-service
  template:
    metadata:
      labels:
        app: zipbob-config-service
    spec:
      containers:
      - name: zipbob-config-service
        image: zipbob-config-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
        - containerPort: 9888
        lifecycle:
          preStop:
            exec:
              command: [ "sh", "-c", "sleep 5" ]
        readinessProbe:
          exec:
            command:
              - /workspace/health-check
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 20


---

apiVersion: v1
kind: Service
metadata:
  name: zipbob-config-service
  labels:
    app: zipbob-config-service
spec:
  type: ClusterIP
  selector:
    app: zipbob-config-service
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: debug
      protocol: TCP
      port: 9888
      targetPort: 9888
