k8s/applications/development/edge-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipbob-edge-service
  labels:
    app: zipbob-edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipbob-edge-service
  template:
    metadata:
      labels:
        app: zipbob-edge-service
    spec:
      containers:
        - name: zipbob-edge-service
          image: zipbob-edge-service
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: zipbob-edge-service
  labels:
    app: zipbob-edge-service
spec:
  type: ClusterIP
  selector:
    app: zipbob-edge-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
    - name: debug
      protocol: TCP
      port: 8000
      targetPort: 8000
