k8s/applications/development/ingredients-manage-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingredients-manage-service
  labels:
    app: ingredients-manage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingredients-manage-service
  template:
    metadata:
      labels:
        app: ingredients-manage-service
    spec:
      containers:
        - name: ingredients-manage-service
          image: ingredients-manage-service
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9001
            - containerPort: 8001
---

apiVersion: v1
kind: Service
metadata:
  name: ingredients-manage-service
  labels:
    app: ingredients-manage-service
spec:
  type: ClusterIP
  selector:
    app: ingredients-manage-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9001
    - name: debug
      protocol: TCP
      port: 8001
      targetPort: 8001
