k8s/applications/development/recipe-review-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-review-service
  labels:
    app: recipe-review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-review-service
  template:
    metadata:
      labels:
        app: recipe-review-service
    spec:
      containers:
        - name: recipe-review-service
          image: recipe-review-service
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9002
            - containerPort: 8002
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]

---

apiVersion: v1
kind: Service
metadata:
  name: recipe-review-service
  labels:
    app: recipe-review-service
spec:
  type: ClusterIP
  selector:
    app: recipe-review-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9002
    - name: debug
      protocol: TCP
      port: 8001
      targetPort: 8002
